logs/yu.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yu'...
Compiling './lib/python3.5/site-packages/yu/argparseutils.py'...
***   File "./lib/python3.5/site-packages/yu/argparseutils.py", line 13
    message = f'{string} 不符合指定的日期格式 {self.format}'
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yu/extractors'...
Compiling './lib/python3.5/site-packages/yu/extractors/base.py'...
***   File "./lib/python3.5/site-packages/yu/extractors/base.py", line 117
    fields: list = None
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yu/extractors/excel.py'...
***   File "./lib/python3.5/site-packages/yu/extractors/excel.py", line 26
    raise ValueError(f'单元格格式不对: {cell.ctype} - {cell.value}')
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yu/formula.py'...
***   File "./lib/python3.5/site-packages/yu/formula.py", line 29
    super().__init__(f'语法错误: {exc.filename}, 第 {exc.lineno} 行, 第 {exc.offset} 个字符')
                                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yu/validators.py'...
***   File "./lib/python3.5/site-packages/yu/validators.py", line 14
    return f'{cls_name}({self.message})'
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yu-0.5.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
